# uproot-custom

./: .buildinfo  .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  binary-format.html  genindex.html  get-started.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.doctrees/: binary-format.doctree  environment.pickle  get-started.doctree  index.doctree
.doctrees/architecture/: binary-data.doctree  bootstrap.doctree  reader-and-factory.doctree  streamer-info.doctree
.doctrees/example/: override-streamer.doctree  read-tobjarray.doctree
.doctrees/examples/: override-streamer.doctree  read-tobjarray.doctree
.doctrees/reference/: api.doctree  binary-format.doctree  reader-backends.doctree  version-requirements.doctree
.doctrees/reference/api/: cpp-api.doctree  cpp-module.doctree  uproot-custom-ref.doctree  uproot_custom.doctree  uproot_custom.readers.doctree
.doctrees/tutorial/: customize-factory-reader.doctree  use-built-in.doctree
.doctrees/tutorial/customize-factory-reader/: binary-data.doctree  bootstrap.doctree  investigate-data.doctree  pipeline.doctree  port-to-cpp.doctree  project-setup.doctree  reader-and-factory.doctree  streamer-info.doctree  template-python-project.doctree
.github/: release.yml
.github/workflows/: auto-update.yml  build-wheels.yml  deploy-docs.yml  nightly-build.yml  python-publish.yml  run-pytest.yml  test-package.yml  weekly-build.yml
_modules/: index.html
_modules/uproot_custom/: AsCustom.html  factories.html  utils.html
_modules/uproot_custom/readers/: python.html
_sources/: get-started.md  index.md
_sources/example/: override-streamer.md  read-tobjarray.md
_sources/reference/: binary-format.md  version-requirements.md
_sources/reference/api/: uproot_custom.readers.rst  uproot_custom.rst
_sources/tutorial/: customize-factory-reader.md  use-built-in.md
_sources/tutorial/customize-factory-reader/: binary-data.md  pipeline.md  port-to-cpp.md  reader-and-factory.md
architecture/: binary-data.html  bootstrap.html  reader-and-factory.html  streamer-info.html
breathe/doxygen/: auto.cfg
breathe/doxygen/auto/xml/: Doxyfile.xml  classuproot_1_1_any_class_reader.xml  (+46 more)
cmake/: uproot-customConfig.cmake.in
cpp/: CMakeLists.txt
cpp/include/uproot-custom/: uproot-custom.hh
cpp/share/cmake/: uproot-customConfig.cmake
cpp/src/: uproot-custom.cc
docs/: concepts.md  conf.py  get-started.md  index.md
docs/example/: override-streamer.md  read-tobjarray.md
docs/reference/: api.md  binary-format.md  reader-backends.md  version-requirements.md
docs/reference/api/: .gitignore  cpp-api.md  uproot-custom-ref.md  uproot_custom_cpp_header.rst  uproot_custom_cpp_source.rst
docs/tutorial/: customize-factory-reader.md  use-built-in.md
docs/tutorial/customize-factory-reader/: binary-data.md  bootstrap.md  investigate-data.md  pipeline.md  port-to-cpp.md  project-setup.md  reader-and-factory.md  streamer-info.md  template-python-project.md
example/: README.md  override-streamer.html  pyproject.toml  read-data.py  read-tobjarray.html
example/cpp/: my_reader.cc
example/gen-demo-data/src/: main.cc
example/my_reader/: OverrideStreamerFactory.py  OverrideStreamerReader.py  TObjArrayFactory.py  __init__.py
examples/: override-streamer.html  read-tobjarray.html
reference/: api.html  binary-format.html  reader-backends.html  version-requirements.html
reference/api/: cpp-api.html  cpp-module.html  uproot-custom-ref.html  uproot_custom.html  uproot_custom.readers.html
src/cpp/: CMakeLists.txt
src/cpp/include/: uproot-custom.hh
src/cpp/share/cmake/: uproot-customConfig.cmake
src/cpp/share/pkgconfig/: uproot-custom.pc
src/cpp/src/: uproot-custom-cpp.cc
src/uproot_custom/: AsCustom.py  __init__.py  readers.py
tests/: conftest.py  test-data-1.root  test-data-2.root  test-data.root  test_AsCustom.py  test_AsGroupedMap.py  test_builtin.py  test_builtin_cpp.py  test_builtin_forth.py  test_builtin_numba.py  test_builtin_python.py  test_downstream_build.py  test_downstream_build_pyproject.toml  test_forth_reader.py  test_readers.py
tests/data/: test_cstyle_array.root  test_pointers.root  test_primitive.root  test_pure_struct.root  test_root_objects.root  test_simple_obj.root  test_stl_array.root  test_stl_complicated.root  test_stl_map.root  test_stl_map_with_obj.root  test_stl_nested.root  test_stl_seq_with_obj.root  test_stl_sequence.root  test_stl_string.root
tests/gen-test-data/: CMakeLists.txt  README.md
tests/gen-test-data/include/: LinkDef.h  TBasicTypes.hh  TCStyleArray.hh  TComplicatedSTL.hh  TNestedSTL.hh  TPointers.hh  TPureStruct.hh  TRootObjects.hh  TSTLArray.hh  TSTLMapWithObj.hh  TSTLSeqWithObj.hh
tests/gen-test-data/src/: main.cc
tutorial/: customize-factory-reader.html  use-built-in.html
tutorial/customize-factory-reader/: binary-data.html  bootstrap.html  investigate-data.html  pipeline.html  port-to-cpp.html  project-setup.html  reader-and-factory.html  streamer-info.html  template-python-project.html
uproot_custom/: AsCustom.py  AsGroupedMap.py  __init__.py  cpp.pyi  factories.py  readers.py  utils.py
uproot_custom/readers/: _forth.py  _numba.py  cpp.py  python.py
