[build-system]
requires = ["scikit-build-core", "pybind11>=2.10.0"]
build-backend = "scikit_build_core.build"

[project]
name = "uproot-custom"
dynamic = ["version"]
requires-python = ">=3.9"
dependencies = ["uproot>=5.0", "awkward", "numpy"]

[tool.scikit-build]
wheel.packages = ["src/uproot_custom"]
sdist.exclude = ["tools"]
sdist.include = ["src/uproot_custom/_version.py"]
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
build-dir = "build/{wheel_tag}"
cmake.build-type = "Debug"

[tool.setuptools_scm] # Section required
write_to = "src/uproot_custom/_version.py"

[tool.black]
exclude = "/(build|dist|env|.git|.tox|.eggs|.venv)/"
line-length = 95
target-version = ['py39', 'py310', 'py311', 'py312', 'py313']

[project.entry-points."cmake.root"]
"uproot-custom" = "uproot_custom/share"
