[build-system]
requires = ["scikit-build-core", "pybind11>=2.10.0"]
build-backend = "scikit_build_core.build"

[project]
name = "uproot-custom"
authors = [{ name = "Mingrun Li", email = "mrun_lee@foxmail.com" }]
description = "uproot extension for reading custom classes"
requires-python = ">=3.9"
dependencies = ["uproot>=5.0", "awkward", "numpy"]
readme = "README.md"
dynamic = ["version"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: C++",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]

[tool.scikit-build]
wheel.packages = ["src/uproot_custom"]
sdist.exclude = ["tools"]
sdist.include = ["src/uproot_custom/_version.py"]
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
build-dir = "build/{wheel_tag}"
cmake.build-type = "Debug"

[tool.setuptools_scm]
write_to = "src/uproot_custom/_version.py"

[tool.black]
exclude = "/(build|dist|env|.git|.tox|.eggs|.venv)/"
line-length = 95
target-version = ['py39', 'py310', 'py311', 'py312', 'py313']

[project.entry-points."cmake.root"]
uproot-custom = "uproot_custom.share.cmake"

[project.entry-points.pkg_config]
uproot-custom = "uproot_custom.share.pkgconfig"
